--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -1,12 +1,12 @@
 .sakib {
--webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
--moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-background-color: #8f8c85;
-width: 250px;
-font-family: 'Oswald', sans-serif;
+	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	background-color: #8f8c85;
+	width: 250px;
+	font-family: 'Oswald', sans-serif;
+	transition: all .2s ease-in-out;
 }
-.sakib {transition: all .2s ease-in-out;}
 .sakib:hover {
     background-color:#989898;
 	cursor: pointer;
@@ -14,27 +14,27 @@ font-family: 'Oswald', sans-serif;
 }
 
 .edu {
--webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
--moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-background-color: #8f8c85;
-width: 300px;
-font-family: 'Oswald', sans-serif;
+	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	background-color: #8f8c85;
+	width: 300px;
+	font-family: 'Oswald', sans-serif;
+	transition: all .2s ease-in-out;
 }
 
-.edu {transition: all .2s ease-in-out;}
 .edu:hover {
     background-color:#989898;
 	cursor: pointer;
 	transform: scale(1.1);
 }
 .exp {
--webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
--moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-background-color: #8f8c85;
-margin-top: 10px;
-font-family: 'Oswald', sans-serif;
+	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	background-color: #8f8c85;
+	margin-top: 10px;
+	font-family: 'Oswald', sans-serif;
 }
 .exp {transition: all .2s ease-in-out;}
 .exp:hover {
@@ -43,12 +43,12 @@ font-family: 'Oswald', sans-serif;
 	transform: scale(1.1);
 }
 .con {
--webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
--moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-background-color: #8f8c85;
-width: 300px;
-font-family: 'Oswald', sans-serif;
+	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	background-color: #8f8c85;
+	width: 300px;
+	font-family: 'Oswald', sans-serif;
 }
 <style>
 a:hover {
