--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -28,16 +28,44 @@
 	cursor: pointer;
 	transform: scale(1.1);
 }
-.exp {
+.etp {
 	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	background-color: #8f8c85;
 	margin-top: 10px;
 	font-family: 'Oswald', sans-serif;
+	transition: all .2s ease-in-out;
 }
-.exp {transition: all .2s ease-in-out;}
-.exp:hover {
+.etp:hover {
+    background-color:#989898;
+	cursor: pointer;
+	transform: scale(1.1);
+}
+.acn {
+	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	background-color: #8f8c85;
+	margin-top: 10px;
+	font-family: 'Oswald', sans-serif;
+	transition: all .2s ease-in-out;
+}
+.acn:hover {
+    background-color:#989898;
+	cursor: pointer;
+	transform: scale(1.1);
+}
+.cap {
+	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	background-color: #8f8c85;
+	margin-top: 10px;
+	font-family: 'Oswald', sans-serif;
+	transition: all .2s ease-in-out;
+}
+.cap:hover {
     background-color:#989898;
 	cursor: pointer;
 	transform: scale(1.1);
