--- a/public/css/simon.css
+++ b/public/css/simon.css
@@ -6,3 +6,13 @@
 	-webkit-border-radius: 250px;
 	border-radius: 250px;
 }
+#cone {
+  width: 0;
+  height: 0;
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+  border-top: 100px solid red;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
