--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -1,9 +1,17 @@
+#body {
+	background-color: black;
+}
+
 .sakib {
 	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	background-color: #8f8c85;
-	width: 250px;
+	width: 850px;
+	position: absolute;
+	left: 200px;
+	top: 30px;
+	font-size: 24px;
 	font-family: 'Oswald', sans-serif;
 	transition: all .2s ease-in-out;
 }
@@ -12,14 +20,33 @@
 	cursor: pointer;
 	transform: scale(1.1);
 }
-
+.h1 {
+	font-size: 44px;
+	text-align: center;
+}
+.h2 {
+	font-size: 28px;
+	text-align: center;
+}
+.h3 {
+	font-size: 32px;
+	text-align: center;
+}
+.ul3 {
+	left: 40px;
+	font-size: 18px;
+}
 .edu {
 	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	background-color: #8f8c85;
-	width: 300px;
+	width: 280px;
 	font-family: 'Oswald', sans-serif;
+	position: absolute;
+	left: 30px;
+	top: 200px;
+	font-size: 24px;
 	transition: all .2s ease-in-out;
 }
 
@@ -33,11 +60,34 @@
 	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	background-color: #8f8c85;
-	margin-top: 10px;
+	width: 300px;
 	font-family: 'Oswald', sans-serif;
+	position: absolute;
+	left: 320px;
+	top: 200px;
+	font-size: 18px;
+	height: 200px;
 	transition: all .2s ease-in-out;
 }
 .etp:hover {
+    background-color:#989898;
+	cursor: pointer;
+	transform: scale(1.1);
+}
+.cap {
+	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
+	background-color: #8f8c85;
+	width: 280px;
+	font-family: 'Oswald', sans-serif;
+	position: absolute;
+	left: 630px;
+	top: 200px;
+	font-size: 24px;
+	transition: all .2s ease-in-out;
+}
+.cap:hover {
     background-color:#989898;
 	cursor: pointer;
 	transform: scale(1.1);
@@ -52,20 +102,6 @@
 	transition: all .2s ease-in-out;
 }
 .acn:hover {
-    background-color:#989898;
-	cursor: pointer;
-	transform: scale(1.1);
-}
-.cap {
-	-webkit-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
-	background-color: #8f8c85;
-	margin-top: 10px;
-	font-family: 'Oswald', sans-serif;
-	transition: all .2s ease-in-out;
-}
-.cap:hover {
     background-color:#989898;
 	cursor: pointer;
 	transform: scale(1.1);
