--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -1,4 +1,4 @@
-#body {
+.body {
 	background-color: black;
 }
 
@@ -29,6 +29,14 @@
 	text-align: center;
 }
 .h3 {
+	font-size: 32px;
+	text-align: center;
+}
+.h4 {
+	font-size: 32px;
+	text-align: center;
+}
+.h5 {
 	font-size: 32px;
 	text-align: center;
 }
@@ -84,7 +92,7 @@
 	position: absolute;
 	left: 630px;
 	top: 200px;
-	font-size: 24px;
+	font-size: 18px;
 	transition: all .2s ease-in-out;
 }
 .cap:hover {
@@ -97,8 +105,12 @@
 	-moz-box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	box-shadow: -7px 10px 17px 2px rgba(0,0,0,0.81);
 	background-color: #8f8c85;
-	margin-top: 10px;
+	width: 265px;
 	font-family: 'Oswald', sans-serif;
+	position: absolute;
+	left: 918px;
+	top: 200px;
+	font-size: 18px;
 	transition: all .2s ease-in-out;
 }
 .acn:hover {
